fixed align of search. Fixed redirect to external url

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
   --mainGrey: #ececec;
   --lightShadow: #2e2e2e;
   --mainOrange: #ffa841;
-  --mainOrangeLight: rgba(255,168,65, 0.3);
-  --mainOrangeMedium: rgba(255,168,65, 0.5);
+  --mainOrangeLight: rgba(255, 168, 65, 0.3);
+  --mainOrangeMedium: rgba(255, 168, 65, 0.5);
   --mainWhite: #ffffff;
   --mainBlack: #222222;
   --darkOrange: #ff8119;
@@ -267,7 +267,6 @@
 /* single listing */
 .listing-content {
   display: flex;
-
 }
 
 @media screen and (max-width: 1200px) {
@@ -303,7 +302,7 @@
 
 @media screen and (max-width: 780px) {
   #myimg {
-    width:10rem;
+    width: 10rem;
   }
 }
 
@@ -406,10 +405,7 @@
   text-transform: uppercase;
 }
 
-.gym-info
-
-
-#container-6 {
+.gym-info #container-6 {
   display: flex;
 }
 
@@ -692,7 +688,7 @@ ul.unstyled {
 }
 
 @media screen and (max-width: 700px) {
-  .profile-gym-button{
+  .profile-gym-button {
     margin-left: 15%;
     font-size: 15px;
   }
@@ -860,7 +856,6 @@ ul.unstyled {
 .booking {
   margin-bottom: 2rem;
   margin-top: 2rem;
-
 }
 
 .booking-grid {
@@ -939,14 +934,13 @@ ul.unstyled {
 .calendar-hours {
   height: 30rem;
   align-items: center;
-
 }
 
 .hour-td {
   border: 2px solid var(--mainOrangeMedium);
-  -webkit-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
--moz-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.18);
+  box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.18);
   border-radius: 5px;
   padding: 5px;
   font-size: 13px;
@@ -956,9 +950,19 @@ box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
   font-weight: lighter;
 }
 
-.calendar-hours tr {}
+.calendar-hours tr {
+}
 
 .idk-pls {
   display: flex;
   flex-direction: column;
+}
+
+.ui.icon.input {
+  width: 70% !important;
+}
+
+.results.transition.visible {
+  margin-left: 15% !important;
+  width: 70% !important;
 }
